<resources>
    <string name="app_name">Ball Maze</string>
    <string name="title">Stars:  </string>
    <string name="diffi">Difficulty</string>
    <string name="skins">Skins</string>
    <string name="info">Information</string>
    <string name="high_scores">High Scores</string>
    <string name="stars">0</string>
    <string name="easydif">Plebeian</string>
    <string name="meddif">Normie</string>
    <string name="harddif">Hard UwU</string>
    <string name="time_easy">0:00</string>
    <string name="time_normal">0:00</string>
    <string name="time_hard">0:00</string>
    <string name="time_temp">0</string>
    <string name="time_active">0</string>
    <string name="title_activity_high_score">high_score</string>

    <string name="skin_default">Default Skin</string>
    <string name="skin_soda">Peculiar Soda</string>
    <string name="skin_summer">Summer Skin</string>
    <string name="skin_sunset">Sunset Skin</string>

</resources>
