<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:padding="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/star_count"
            android:text="@string/stars"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:padding="20dp"/>

    </LinearLayout>



    <Button
        android:id="@+id/diffi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diffi"
        android:background="@color/colorPrimaryDark"
        android:textSize="@android:dimen/app_icon_size"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:onClick="holder"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/high_score2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/high_scores"
        android:background="@color/colorPrimaryDark"
        android:textSize="@android:dimen/app_icon_size"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:onClick="holder"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/skins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skins"
        android:background="@color/colorPrimaryDark"
        android:textSize="@android:dimen/app_icon_size"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:onClick="holder"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:background="@color/colorPrimaryDark"
        android:textSize="@android:dimen/app_icon_size"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:onClick="holder"
        android:layout_weight="1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

        

</LinearLayout>