<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".difficulty_selector"
    android:orientation="vertical"
    android:id="@+id/linear_layout_diff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_layout2_diff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:padding="20dp"
            android:id="@+id/stars_diff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/star_count"
            android:text="@string/stars"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:padding="20dp"/>

    </LinearLayout>



    <Button
        android:id="@+id/pleb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easydif"
        android:background="@color/colorPrimaryDark"
        android:textSize="@android:dimen/app_icon_size"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:onClick="button_click"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/text_view_diff"/>

    <Button
        android:id="@+id/norm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meddif"
        android:background="@color/colorPrimaryDark"
        android:textSize="@android:dimen/app_icon_size"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:clickable="@bool/normie_unlock"
        android:onClick="button_click"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/text_view2_diff"/>

    <Button
        android:id="@+id/hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/harddif"
        android:background="@color/colorPrimaryDark"
        android:textSize="@android:dimen/app_icon_size"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:clickable="@bool/hard_unlock"
        android:onClick="button_click"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="
        Contact us at workingtitle@email.com"
        android:textSize="18dp"
        android:id="@+id/email_diff"/>



</LinearLayout>