<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".no_scores"
    android:orientation="vertical"
    android:id="@+id/linear_layout_hscore">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_layout2_hscore">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:padding="20dp"
            android:id="@+id/Stars_hscore"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/star_count"
            android:text="@string/stars"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:padding="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:id="@+id/plebian_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Plebian:"
            android:textSize="36dp"
            android:padding="10dp"
            android:id="@+id/plebian_hscore"/>

        <TextView
            android:id="@+id/hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_easy"
            android:textSize="36dp"
            android:padding="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:id="@+id/normie_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Normie: "
            android:textSize="36dp"
            android:padding="10dp"
            android:id="@+id/normie_hscore"/>

        <TextView
            android:id="@+id/hi2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_normal"
            android:textSize="36dp"
            android:padding="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:id="@+id/hard_UwU_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hard UwU: "
            android:textSize="36dp"
            android:padding="10dp"
            android:id="@+id/hard_UwU_hscore"/>

        <TextView
            android:id="@+id/hi3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_hard"
            android:textSize="36dp"
            android:padding="10dp"/>

    </LinearLayout>


</LinearLayout>