<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    android:orientation="vertical"
    android:id="@+id/linear_layout_home2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_layout2_home2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:padding="20dp"
            android:id="@+id/Stars_home"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/star_count"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:padding="20dp"/>

    </LinearLayout>



    <Button
        android:id="@+id/diffi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diffi"
        android:background="@color/colorPrimaryDark"
        android:textSize="@android:dimen/app_icon_size"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:onClick="button_click"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/text_view_home2"/>

    <Button
        android:id="@+id/high_scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/high_scores"
        android:background="@color/colorPrimaryDark"
        android:textSize="@android:dimen/app_icon_size"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:onClick="button_click"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/text_view2_home"/>

    <Button
        android:id="@+id/skins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skins"
        android:background="@color/colorPrimaryDark"
        android:textSize="@android:dimen/app_icon_size"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:onClick="button_click"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/text_view3_home2"/>

    <Button
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:background="@color/colorPrimaryDark"
        android:textSize="@android:dimen/app_icon_size"
        android:padding="10dp"
        android:textColor="@color/colorAccent"
        android:onClick="button_click"
        android:layout_weight="1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="
        Contact: MazeBalls2019@gmail.com"
        android:textSize="18dp"
        android:id="@+id/email_home2"/>



</LinearLayout>