<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Win_screen"
    android:orientation="vertical"
    android:id="@+id/linear_layout_win">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_layout2_win">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:padding="20dp"
            android:id="@+id/Stars_win"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/star_count"
            android:text="@string/stars"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:padding="20dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Congradulations!"
        android:textSize="36dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:id="@+id/grats"/>

    <VideoView
        android:id="@+id/rick"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/linear_layout3_win">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your time was: "
            android:textSize="36dp"
            android:padding="10dp"
            android:id="@+id/time_text"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_easy"
            android:textSize="36dp"
            android:padding="10dp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="See High Scores"
        android:background="@color/skin1_buttons"
        android:textColor="@color/skin1_btn_text"
        android:onClick="button_click"
        android:id="@+id/back_to_score_button"/>


</LinearLayout>