<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".skins"
    android:orientation="vertical"
    android:id="@+id/linear_layout_skins">

    <!-- Star counter -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_layout2_skin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/title"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:id="@+id/Stars_skins"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/star_count"
            android:text="@string/stars"
            android:textSize="@android:dimen/notification_large_icon_height"
            android:padding="15dp"
            />
    </LinearLayout>

    <!-- Text for skin buttons one through three -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/linear_layout3_skin">

        <TextView
            android:layout_width="105dp"
            android:layout_height="15dp"
            android:layout_marginLeft="33dp"
            android:text="@string/skin_default"
            android:textSize="14dp"
            android:id="@+id/skin_name"
            />
        <TextView
            android:layout_width="105dp"
            android:layout_height="15dp"
            android:layout_marginLeft="28dp"
            android:text="@string/skin_soda"
            android:textSize="14dp"
            android:id="@+id/skin_name2"
            />
    </LinearLayout>

    <!-- Buttons for skins one and two -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_weight="0.03"
        android:orientation="horizontal"
        android:id="@+id/linear_layout4_skins">

        <Button
            android:id="@+id/skin_default"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginLeft="25dp" />

        <Button
            android:id="@+id/skin_peculiar_soda"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginLeft="25dp" />
    </LinearLayout>


    <!-- Text for skin buttons three and four -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_layout5_skins">

        <TextView
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="33dp"
            android:text="@string/skin_soda"
            android:textSize="14dp"
            android:id="@+id/skin_name3"/>
        <TextView
            android:layout_width="105dp"
            android:layout_height="15dp"
            android:layout_marginLeft="28dp"
            android:text="@string/skin_soda"
            android:textSize="14dp"
            android:id="@+id/skin_name4"
            />
    </LinearLayout>

    <!-- Buttons for skins three and four -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:layout_weight="0.03"
        android:orientation="horizontal"
        android:id="@+id/linear_layout6_skins">

        <Button
            android:id="@+id/skin_three"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginLeft="25dp"
            />

        <Button
            android:id="@+id/skin_four"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginLeft="25dp"
            />
    </LinearLayout>

</LinearLayout>